--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.5.1",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "gsap": "^3.12.5",
     "nuxt": "^3.12.3",
     "vue": "latest"
